--- a/vuejs_project/public/css/style.css
+++ b/vuejs_project/public/css/style.css
@@ -513,9 +513,10 @@ label.valid {
   margin-left: 80px; }
 
 .signin-image {
-  margin-left: 110px;
+   margin-left: 110px;
   margin-right: 20px;
-  margin-top: 10px; }
+  margin-top: 10px; 
+ }
 
 @media screen and (max-width: 1200px) {
   .container {
